added tweets page

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,5 +14,37 @@
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet.</p>
     <a href="https://github.com/abdulrahman-elhanafy/My_First_Portfolio" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+    
+    <p><a href="tweets.html">Check out my embedded tweets!</a></p>
+
+    <table>
+        <thead>
+            <td>Name</td>
+            <td>Age</td>
+            <td>Country</td>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
+            </tr>
+            <tr>
+                <td>Michael</td>
+                <td>32</td>
+                <td>Australia</td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>Uk</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
