make it semantic

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,7 +6,16 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>This is a Portfolio</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="tweets.html">tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>This is a Portfolio</h1>
     <h2>For Abdulrahman</h2>
     <h3>a student in ALX course</h3>
     <p>Lorem ipsum dolor sit amet.</p>
@@ -17,6 +26,16 @@
     
     <p><a href="tweets.html">Check out my embedded tweets!</a></p>
 
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Abdulrahman - <a href="https://github.com/abdulrahman-elhanafy" target="_blank">here</a>.</p>
+    </footer>
+    
     <table>
         <thead>
             <td>Name</td>
