--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,17 +6,27 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>This is a Portfolio</h1>
-    <h2>For Abdulrahman</h2>
-    <h3>a student in ALX course</h3>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <a href="https://github.com/abdulrahman-elhanafy/My_First_Portfolio" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
 
-    <embed src="<blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/DYhHLcVdIr" target="_blank">pic.twitter.com/DYhHLcVdIr</a></p>&mdash; Rothmus 🏴 (@Rothmus) <a href="https://twitter.com/Rothmus/status/1946627295382229209?ref_src=twsrc%5Etfw">July 19, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>" type="img">
+    <header>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="tweets.html">tweets</a></li>
+        </ul>
+    </header>
 
-    <p><a href="index.html">← Back to homepage</a></p>
+    <main>
+        <article>
+            <h1>my tweet page</h1>
+            <embed src="<blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/DYhHLcVdIr" target="_blank">pic.twitter.com/DYhHLcVdIr</a></p>&mdash; Rothmus 🏴 (@Rothmus) <a href="https://twitter.com/Rothmus/status/1946627295382229209?ref_src=twsrc%5Etfw">July 19, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>" type="img">
+        
+            <p><a href="index.html">← Back to homepage</a></p>
+        </article>
+            <aside>
+             <p>placeholder to add comment thread later</p>
+         </aside>
+    </main>
+    <footer>
+        <p>Made by Abdulrahman - <a href="https://github.com/abdulrahman-elhanafy" target="_blank">here</a>.</p>
+    </footer>
     </body>
 </html>
