--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,69 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Portfolio</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="tweets.html">tweets</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="tweets.html">tweets</a></li>
+      </ul>
     </header>
 
     <main>
-        <article>
-            <h1>This is a Portfolio</h1>
-    <h2>For Abdulrahman</h2>
-    <h3>a student in ALX course</h3>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <a href="https://github.com/abdulrahman-elhanafy/My_First_Portfolio" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
-    
-    <p><a href="tweets.html">Check out my embedded tweets!</a></p>
+      <article>
+        <h1>This is a Portfolio</h1>
+        <h2>For Abdulrahman</h2>
+        <h3>a student in ALX course</h3>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <a
+          href="https://github.com/abdulrahman-elhanafy/My_First_Portfolio"
+          target="_blank"
+          ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+        /></a>
 
-        </article>
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+        <p><a href="tweets.html">Check out my embedded tweets!</a></p>
 
-    <footer>
-        <p>Made by Abdulrahman - <a href="https://github.com/abdulrahman-elhanafy" target="_blank">here</a>.</p>
-    </footer>
-    
-    <table>
-        <thead>
+        <table>
+          <thead>
             <td>Name</td>
             <td>Age</td>
             <td>Country</td>
-        </thead>
-        <tbody>
+          </thead>
+          <tbody>
             <tr>
-                <td>John</td>
-                <td>25</td>
-                <td>USA</td>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
             </tr>
             <tr>
-                <td>Emily</td>
-                <td>28</td>
-                <td>Canada</td>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
             </tr>
             <tr>
-                <td>Michael</td>
-                <td>32</td>
-                <td>Australia</td>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
             </tr>
             <tr>
-                <td>Sophia</td>
-                <td>21</td>
-                <td>Uk</td>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>Uk</td>
             </tr>
-        </tbody>
-    </table>
-</body>
+          </tbody>
+        </table>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <footer>
+      <p>
+        Made by Abdulrahman -
+        <a href="https://github.com/abdulrahman-elhanafy" target="_blank"
+          >here</a
+        >.
+      </p>
+    </footer>
+  </body>
 </html>
