edited id called

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,14 +12,14 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#Introduction">Introduction</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#About">About Me</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <main>
-      <section id="Introduction">
+      <section id="introduction">
         <h2>Introduction</h2>
         <p>
           Second-Year CS Student 💻 | Designing Interfaces & Writing Code |
@@ -27,7 +27,7 @@
         </p>
       </section>
 
-      <section id="Projects">
+      <section id="projects">
         <h2>Projects</h2>
         <article>
           <h3>Data Analyst</h3>
@@ -38,7 +38,7 @@
         </article>
       </section>
 
-      <section id="About">
+      <section id="about">
         <h2>About Me</h2>
         <p>A second-year student in CS college at tanta UNI</p>
         <p>my Skills</p>
@@ -62,7 +62,7 @@
         </ul>
       </section>
 
-      <section id="Contact">
+      <section id="contact">
         <h2>Contact</h2>
         <a href="mailto:abdulrahman.elhanafy.dev@gmail.com" target="_blank"
           >Email</a
