--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,86 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
-  </head>
-  <body>
-    <header>
-      <h1>Abdulrahman Hanafy</h1>
-      <p>Computer Science Student | Full Stack Developer in Progress 🚀</p>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <section id="introduction">
-        <h2>Introduction</h2>
-        <p>
-          Second-Year CS Student 💻 | Designing Interfaces & Writing Code |
-          Building My Future, Pixel by Pixel
-        </p>
-      </section>
 
-      <section id="projects">
-        <h2>Projects</h2>
-        <article>
-          <h3>Data Analyst</h3>
-          <p>
-            A clean, responsive dashboard built for real-time data insights.
-          </p>
-          <a href="www.https://example.com">examplelink</a>
-        </article>
-      </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Personal Portfolio</title>
+</head>
 
-      <section id="about">
-        <h2>About Me</h2>
-        <p>A second-year student in CS college at tanta UNI</p>
-        <p>my Skills</p>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Pure JS</li>
-          <li>UI UX</li>
-          <li>web Designing</li>
-        </ul>
-        <p>My Hobbies</p>
-        <ul>
-          <li>📚 Lifelong Learning</li>
-          <li>🎨 UI/UX Design</li>
-          <li>📖 Reading</li>
-          <li>✏️ Drawing</li>
-          <li>🚶‍♂️ Walking</li>
-          <li>✈️ Traveling</li>
-          <li>🧠 Exploring New Skills</li>
-          <li>🔍 Curious by Nature</li>
-        </ul>
-      </section>
-
-      <section id="contact">
-        <h2>Contact</h2>
-        <a href="mailto:abdulrahman.elhanafy.dev@gmail.com" target="_blank"
-          >Email</a
-        >
-        <a href="www.linkedin.com/in/abdulrahman-hanafy" target="_blank"
-          >LinkedIn</a
-        >
-        <a href="https://github.com/abdulrahman-elhanafy" target="_blank"
-          >Github</a
-        >
-      </section>
-    </main>
-
-    <footer>
+<body>
+  <header>
+    <h1>Abdulrahman Hanafy</h1>
+    <p>Computer Science Student | Full Stack Developer in Progress 🚀</p>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section id="introduction">
+      <h2>Introduction</h2>
       <p>
-        &copy; 2025 Owned & Operated by Genius Minds — try to copy, we see you.
-        👀
+        Second-Year CS Student 💻 | Designing Interfaces & Writing Code |
+        Building My Future, Pixel by Pixel
       </p>
-    </footer>
-  </body>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <article>
+        <h3>Data Analyst</h3>
+        <p>
+          A clean, responsive dashboard built for real-time data insights.
+        </p>
+        <a href="www.https://example.com">examplelink</a>
+      </article>
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>A second-year student in CS college at tanta UNI</p>
+      <p>my Skills</p>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Pure JS</li>
+        <li>UI UX</li>
+        <li>web Designing</li>
+      </ul>
+      <p>My Hobbies</p>
+      <ul>
+        <li>📚 Lifelong Learning</li>
+        <li>🎨 UI/UX Design</li>
+        <li>📖 Reading</li>
+        <li>✏️ Drawing</li>
+        <li>🚶‍♂️ Walking</li>
+        <li>✈️ Traveling</li>
+        <li>🧠 Exploring New Skills</li>
+        <li>🔍 Curious by Nature</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <a href="mailto:abdulrahman.elhanafy.dev@gmail.com" target="_blank">Email</a>
+      <a href="www.linkedin.com/in/abdulrahman-hanafy" target="_blank">LinkedIn</a>
+      <a href="https://github.com/abdulrahman-elhanafy" target="_blank">Github</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      &copy; 2025 Owned & Operated by Genius Minds — try to copy, we see you.
+      👀
+    </p>
+  </footer>
+</body>
+
 </html>
