--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -68,7 +68,7 @@
 
     <footer>
       <p>
-        Made by Abdulrahman -
+        &copy; Made by Abdulrahman -
         <a href="https://github.com/abdulrahman-elhanafy" target="_blank"
           >here</a
         >.
