--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -37,7 +37,7 @@
 
   <footer>
     <p>
-      Made by Abdulrahman -
+      &copy; Made by Abdulrahman -
       <a href="https://github.com/abdulrahman-elhanafy" target="_blank">here</a>.
     </p>
   </footer>
